# differ

./: .gitignore  AGENTS.md  README.md  alembic.ini  differ.db  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
electron/main/: index.ts  tsconfig.json
electron/main/db/: index.ts  migrations.ts  types.ts
electron/main/git/: adapter.ts  client.ts  parse-diff.d.ts
electron/main/ipc/: ai.ts  comments.ts  fs.ts  index.ts  repos.ts  sessions.ts  settings.ts  utils.ts
electron/main/repositories/: ai.ts  comment.ts  repo.ts  session.ts  settings.ts
electron/main/services/: ai.ts  comment.ts  diff.ts  errors.ts  repo.ts  session.ts  settings.ts  validators.ts
electron/preload/: index.ts  tsconfig.json
electron/shared/: ipc.ts
frontend/: index.html  index.ts  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  electron.d.ts  frontend.tsx  router.ts  styles.css  types.ts  util.ts
frontend/src/components/: Article.tsx  Banner.tsx  BranchPicker.tsx  Colophon.tsx  ConfirmationModal.tsx  DirectoryPicker.tsx  Floater.tsx  (+13 more)
scripts/: db-inspect.ts  tsconfig.json
src/differ_api/: __init__.py  app.py
src/differ_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_comments.py  test_compare.py  test_repos.py  test_sessions.py  test_workflow.py
tests/integration/: workflow.test.ts
tests/unit/: api-bridge.test.ts  db-inspect.test.ts  db.test.ts  electron-smoke.test.ts  git.test.ts  ipc.test.ts  services.test.ts
(+25 files in other folders)
